[package]
name = "pinshot-blue"
version = "4.4.11"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
itoa = "1.0"

[lib]
crate-type = ["cdylib"]
