[package]
name = "pinshot-blue"
version = "5.1.27"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
itoa = "1.0"

[lib]
crate-type = ["cdylib"]

# Configuration for Windows GNU target
[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "target-feature=+crt-static"]

# cargo build --target=x86_64-pc-windows-msvc --release
# cargo build --target=x86_64-pc-windows-msvc --debug
# cargo build --target=x86_64-pc-windows-gnu --release
